--- a/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:divider="@null"
+        android:dividerHeight="0dp"/>
     <LinearLayout
         android:id="@+id/tvVIPTipsLoadingProgress"
         android:layout_width="fill_parent"
