--- a/Betman/app/src/main/res/layout/activity_main.xml
+++ b/Betman/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
@@ -13,54 +14,54 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/myBackground"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:background="@drawable/logo"/>
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/logo_2"
+            />
         <com.ogaclejapan.smarttablayout.SmartTabLayout
             android:id="@+id/tabsLayout"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            app:stl_indicatorAlwaysInCenter="false"
-            app:stl_indicatorWithoutPadding="false"
-            app:stl_indicatorInFront="false"
-            app:stl_indicatorInterpolation="smart"
-            app:stl_indicatorGravity="bottom"
-            app:stl_indicatorColor="@color/deepPurplePrimary"
-            app:stl_indicatorThickness="30dp"
-            app:stl_indicatorWidth="auto"
-            app:stl_indicatorCornerRadius="2dp"
-            app:stl_overlineColor="#4dffffff"
-            app:stl_overlineThickness="0dp"
-            app:stl_underlineColor="#000"
-            app:stl_underlineThickness="1dp"
-            app:stl_dividerColor="#4dffffff"
-            app:stl_dividerThickness="0dp"
             android:background="@color/deepPurplePrimaryDark"
+            app:stl_clickable="true"
             app:stl_defaultTabBackground="?attr/selectableItemBackground"
             app:stl_defaultTabTextAllCaps="false"
             app:stl_defaultTabTextColor="#FC000000"
-            app:stl_defaultTabTextSize="12sp"
             app:stl_defaultTabTextHorizontalPadding="16dp"
             app:stl_defaultTabTextMinWidth="0dp"
+            app:stl_defaultTabTextSize="12sp"
             app:stl_distributeEvenly="true"
-            app:stl_clickable="true"
-            app:stl_titleOffset="24dp"
+            app:stl_dividerColor="#4dffffff"
+            app:stl_dividerThickness="0dp"
             app:stl_drawDecorationAfterTab="false"
-            />
+            app:stl_indicatorAlwaysInCenter="false"
+            app:stl_indicatorColor="@color/deepPurplePrimary"
+            app:stl_indicatorCornerRadius="2dp"
+            app:stl_indicatorGravity="bottom"
+            app:stl_indicatorInFront="false"
+            app:stl_indicatorInterpolation="smart"
+            app:stl_indicatorThickness="30dp"
+            app:stl_indicatorWidth="auto"
+            app:stl_indicatorWithoutPadding="false"
+            app:stl_overlineColor="#4dffffff"
+            app:stl_overlineThickness="0dp"
+            app:stl_titleOffset="24dp"
+            app:stl_underlineColor="#000"
+            app:stl_underlineThickness="1dp" />
 
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
+        android:layout_below="@+id/appbar"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
