--- a/Betman/app/src/main/res/layout/lv_item_ad_display.xml
+++ b/Betman/app/src/main/res/layout/lv_item_ad_display.xml
@@ -4,48 +4,138 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-<android.support.v7.widget.CardView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:elevation="5dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:padding="10dp"
-    app:cardBackgroundColor="#f9f9f9"
-    app:cardCornerRadius="4dp">
-    <RelativeLayout
+
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:elevation="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:padding="10dp"
+        app:cardBackgroundColor="#f9f9f9"
+        app:cardCornerRadius="4dp">
 
-        <Button
-            android:id="@+id/btnShowAd"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="#f9f9f9"
-            android:text="Tap to unlock the match!"
-            android:textAllCaps="false"
-            android:visibility="gone" />
-
-        <ProgressBar
-            android:id="@+id/adLoadingProgress"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:elevation="10dp"
-            />
+            android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/adLoadingButton"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="#f9f9f9"
-            android:text="Loading...."
-            android:textAllCaps="false" />
+            <RelativeLayout
+                android:id="@+id/adReadyToView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btnShowAd"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:background="#f9f9f9"
+                    android:text="Tap to unlock the match!"
+                    android:textAllCaps="false" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@mipmap/football_icon"
+                    android:elevation="2dp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@mipmap/basketball_icon"
+                    android:elevation="2dp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/btnShowAd"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@mipmap/basketball_icon"
+                    android:elevation="1dp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/btnShowAd"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@mipmap/football_icon"
+                    android:elevation="1dp" />
+            </RelativeLayout>
 
 
+            <RelativeLayout
+                android:id="@+id/relativeLayoutAdView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@mipmap/football_icon"
+                    android:elevation="2dp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@mipmap/basketball_icon"
+                    android:elevation="2dp" />
+
+                <ProgressBar
+                    android:id="@+id/adLoadingProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:elevation="3dp" />
+
+                <Button
+                    android:id="@+id/adLoadingButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:background="#f9f9f9"
+                    android:text="Loading...."
+                    android:textAllCaps="false" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/adLoadingButton"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@mipmap/basketball_icon"
+                    android:elevation="1dp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/adLoadingButton"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@mipmap/football_icon"
+                    android:elevation="1dp" />
+            </RelativeLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 
 </RelativeLayout>
