--- a/Betman/app/src/main/res/layout/lv_adapter_tv_vip_tips.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_vip_tips.xml
@@ -22,15 +22,35 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp">
 
+                <ImageView
+                    android:id="@+id/lvImgFirstFlagVIPTipsTab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:minHeight="24dp"
+                    android:minWidth="24dp"/>
                 <TextView
                     android:id="@+id/tvTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
                     android:gravity="center"
+                    android:layout_weight="1"
                     android:text="Time" />
+
+                <ImageView
+                    android:id="@+id/lvImgSecondFlagVIPTipsTab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:minHeight="24dp"
+                    android:minWidth="24dp"/>
 
             </LinearLayout>
 
