--- a/Betman/app/src/main/res/layout/tab_view_vip.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip.xml
@@ -64,31 +64,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/deepPurplePrimary"
-                android:gravity="center"
-                android:text="Tips"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1"-->
+                <!--android:background="@color/deepPurplePrimary"-->
+                <!--android:gravity="center"-->
+                <!--android:text="Tips"-->
+                <!--android:textColor="@color/black"-->
+                <!--android:textSize="12sp" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/deepPurplePrimaryDark"
-                android:gravity="center"
-                android:text="Live"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1"-->
+                <!--android:background="@color/deepPurplePrimaryDark"-->
+                <!--android:gravity="center"-->
+                <!--android:text="Live"-->
+                <!--android:textColor="@color/black"-->
+                <!--android:textSize="12sp" />-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
         <Button
             android:id="@+id/btnSub"
@@ -101,13 +101,15 @@
             android:textColor="@color/black" />
 
         <TextView
-            android:layout_width="200dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/btnSub"
             android:layout_centerHorizontal="true"
+            android:textSize="13sp"
             android:text="@string/notSubText"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
+
             android:textStyle="bold" />
 
         <!--<RelativeLayout-->
