--- a/Betman/app/src/main/res/values/colors.xml
+++ b/Betman/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="lvItemVipLiveBackground">#03a9f4</color>
     <color name="myBackground">#29B6F6</color>
     <color name="white">#ffffff</color>
+    <color name="blue">#2a51c6</color>
     <color name="predictionFailed">@android:color/holo_red_light</color>
 </resources>
